Fixed the problem caused by z-index value Problem detail: https://github.com/EdgeTranslate/EdgeTranslate/projects/1#card-24734701

--- a/src/display/display.styl
+++ b/src/display/display.styl
@@ -10,7 +10,7 @@
     border: none;
     box-sizing: border-box;
     // box-shadow: 0px 0px 50px rgb(200,200,200,0.5);
-    z-index: 10000;
+    z-index: 10000000;
     transition: left 300ms;
     transition: right 300ms;
 }
